--- a/api/slider/models/slider.settings.json
+++ b/api/slider/models/slider.settings.json
@@ -12,7 +12,7 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "slide1": {
+    "image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
