--- a/api/noticias/models/noticias.settings.json
+++ b/api/noticias/models/noticias.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "noticias",
   "info": {
-    "name": "Noticias"
+    "name": "Noticias",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,7 +16,7 @@
       "type": "string"
     },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images",
