--- a/api/noticias/models/noticias.settings.json
+++ b/api/noticias/models/noticias.settings.json
@@ -35,6 +35,24 @@
     },
     "read": {
       "type": "string"
+    },
+    "Titulo": {
+      "type": "string"
+    },
+    "Descripcion": {
+      "type": "text"
+    },
+    "Imagen": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
