--- a/api/disco/models/disco.settings.json
+++ b/api/disco/models/disco.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "discos",
   "info": {
-    "name": "Disco"
+    "name": "Disco",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -28,6 +29,9 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "year": {
+      "type": "biginteger"
     }
   }
 }
