--- a/api/multimedia/models/multimedia.settings.json
+++ b/api/multimedia/models/multimedia.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "multimedias",
   "info": {
-    "name": "multimedia"
+    "name": "multimedia",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -30,6 +31,9 @@
       "type": "string"
     },
     "moreinfo": {
+      "type": "string"
+    },
+    "youtube": {
       "type": "string"
     }
   }
