gp-disco uniqute images

--- a/api/gp-media/models/gp-media.settings.json
+++ b/api/gp-media/models/gp-media.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "gp_medias",
   "info": {
-    "name": "gpMedia"
+    "name": "gpMedia",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -21,7 +22,7 @@
       "type": "string"
     },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images",
