--- a/api/showcase/models/showcase.settings.json
+++ b/api/showcase/models/showcase.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "showcases",
   "info": {
-    "name": "Showcase"
+    "name": "Showcase",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -22,6 +23,9 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "mobile": {
+      "type": "boolean"
     }
   }
 }
