adding copared album

--- a/api/letras/models/letras.settings.json
+++ b/api/letras/models/letras.settings.json
@@ -38,17 +38,8 @@
     "track": {
       "type": "integer"
     },
-    "caratula": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {}
+    "comparedAlbum": {
+      "type": "string"
     }
   }
 }
