--- a/api/conciertos/models/conciertos.settings.json
+++ b/api/conciertos/models/conciertos.settings.json
@@ -21,8 +21,8 @@
     "lugar": {
       "type": "string"
     },
-    "precio": {
-      "type": "biginteger"
+    "price": {
+      "type": "string"
     }
   }
 }
